20071101 csw.c,tape.c,tape_block.c,test/test.c: add test for reading empty
         csw files and add more fixes to cope (more for bug #1821425) (Fred).
20071109 tap.c,test/test.c: ensure .tap writing code handles all known block
         types (fixes bug #1828945; thanks, Stuart Brady).
20071112 timings.c: timing tweak for TC2048 and TC2068 based on test programs
         from Phil and Woodster (Fred).
20071124 accessor.pl,snap_accessors.txt,snapshot.c,szx.c,z80.c: add support
         for the +D in z80 and szx snapshots (patch #1782512) (Fred).
20071124 szx.c: fix warnings.
20071125 test/test.c: fix warnings (Stuart).
20071125 tap.c: fix error messages (Stuart).
20071128 ChangeLog: update (Stuart).
20071129 sna.c: fix misleading comment.
20071129 sna.c: sanity check SP before attempting to read from it.
20071129 tests/{sp-2000.sna.gz,sp-ffff.sna.gz,test.c}: add tests for bugs
         #1841085 (SP not sanity checked when loading 48K .sna file) and
         #1841111 (compressed snapshots cause segfault).
20071129 libspectrum.c: check new_filename before checking *new_filename.
20071130 dll.c: fix typo and remove executable property (Stuart).
20071130 libspectrum.c: free *new_filename instead of new_filename (Stuart).
20071130 plusd.c: enable DISCiPLE/+D snapshot support and add support for 128K
	 DISCiPLE/+D snapshots (feature request #1764996) (Stuart).
20071130 internals.h,libspectrum.c,libspectrum.h.in,tap.c,tape.c: add support
	 for .spc, .sta and .ltp tape images (feature request #1764995)
	 (Stuart).
20071130 libspectrum.h.in: refer also to the DISCiPLE in comments (Stuart).
20071130 libspectrum.c,libspectrum.h.in,szx.c: add support for Pentagon 512
	 and 1024 snapshots.
20071130 szx.c: save the Pentagon 1024 secondary memory control port as well.
20071130 doc/libspectrum.{3,txt}: document .spc, .sta and .ltp support (Stuart).
20071201 szx.c: change to Pentagon 1024 secondary memory control port after
	 discussion with Jon Needle.